--- a/contacto.html
+++ b/contacto.html
@@ -41,9 +41,9 @@
                 <p>Esto es mi pagina de contacto</p>
                 <br>
                 <form name="contactoForm" action="" onsubmit="return checkForm()" method="post">
-                    <p>Nombre:</p><br> <input type="text" name="contactoNombre"><br>
-                    <p>Email:<br> <input type="email" name="contactoEmail"><br>
-                    <p>Texto de contacto:</p><br> <textarea id="contactoTexto" rows="4" cols="50">
+                    <p>Nombre:</p> <input type="text" name="contactoNombre"><br>
+                    <p>Email:</p><input type="email" name="contactoEmail"><br>
+                    <p>Texto de contacto:</p> <textarea id="contactoTexto" rows="4" cols="50">
                     </textarea><br>
                     <input type="submit" value="Submit">
                 </form>
