--- a/reloj.html
+++ b/reloj.html
@@ -40,9 +40,9 @@
                 <br>
                 <p>Esto es un relog</p>
                 <br>
-                <div id="clock">
+                <p id="clock">
 
-                </div>
+                </p>
                 <br>
             </div>
         </div>
