--- a/contacto.html
+++ b/contacto.html
@@ -50,9 +50,11 @@
                 
             </div>
         </div>
-        <button type="button" onclick="setBlackTheme()">Tema Negro</button> 
-        <button type="button" onclick="setWhiteTheme()">Tema Blanco</button> 
         <input id="btnscroll" type="button" value="Subir al inicio" />
+        <div class="temas">
+            <img src="./img/theme2.png" width="50px" height="50px" onclick="setWhiteTheme()"></button> <br>
+            <img src="./img/theme1.png" width="50px" height="50px" onclick="setBlackTheme()"></button> <br>
+        </div>
         <script>
         </script>
     </body>
