--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                     </div>
                     <div class="containerAds">
                         <h2>__________¿Quien soy?________</h2>
-                        <img src="./img/caracol.jpg" width="370px" height="300px"><br>
-                        <p>lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum lorem ipsum </p>
+                        <img src="./img/me.jfif" width="370px" height="330px"><br>
+                        <p>Soy estudiantes del grado superior de Desarrollo de Aplicaciones Web en el instituto IES Francisco Ayala, ¡preguntame lo que sea!</p>
                         <h1>Login</h1>
                         <form>
                             Usuario: <input type="text" id="loginName" name="busqueda" placeholder="Usuario">
@@ -61,11 +61,12 @@
             <div id="swatch" class="ui-widget-content ui-corner-all"></div>
             <br>
         </div>
-        <button type="button" onclick="setBlackTheme()">Tema Negro</button> 
-        <button type="button" onclick="setWhiteTheme()">Tema Blanco</button> 
         <input id="btnscroll" type="button" value="Subir al inicio" />
         <script>
           </script>
-    
+        <div class="temas">
+            <img src="./img/theme2.png" width="50px" height="50px" onclick="setWhiteTheme()"></button> <br>
+            <img src="./img/theme1.png" width="50px" height="50px" onclick="setBlackTheme()"></button> <br>
+        </div>
     </body>
 </html>
