--- a/sobremi.html
+++ b/sobremi.html
@@ -41,28 +41,33 @@
                 <p>Esto es un arcordeon de jquery</p>
                 <br>
                 <div id="accordion">
-                    <h3>Section 1</h3>
+                    <h3>Quien soy</h3>
                     <div>
-                      Hola
+                      Soy José Miguel Sánchez Jiménez y actualmente soy estudianten del ciclo de grado superior de Desarrollo de Aplicaciones Web.
                     </div>
-                    <h3>Section 2</h3>
+                    <h3>Habilidades</h3>
                     <div>
-                      Muy
-                    </div>
-                    <h3>Section 3</h3>
-                    <div>
-                    Buenas
-                    </div>
-                    <h3>Section 4</h3>
-                    <div>
-                      :)
+                      Grado medio de Sistemas Microinformaticos y Redes, que me permite:<br>
+                        -Reparar un ordenador localizando el problema en hardware y software.<br>
+                        -Reparar problemas de red, impresoras...<br>
+                        -Manejo de programas como Word, Excell y Access<br>
+                        <br>
+                      Grado superior de Desarrollo de Aplicaciones Web, que me permite:<br>
+                        -Programar software.<br>
+                        -Crear y manejar bases de datos.<br>
+                        -crear webs estaticas y dinamicas<br>
+                        -crear aplicaciones web<br>
+                        -diseñar webs<br>
+                        <br>
                     </div>
                   </div>
             </div>
         </div>
-        <button type="button" onclick="setBlackTheme()">Tema Negro</button> 
-        <button type="button" onclick="setWhiteTheme()">Tema Blanco</button> 
         <input id="btnscroll" type="button" value="Subir al inicio" />
+        <div class="temas">
+            <img src="./img/theme2.png" width="50px" height="50px" onclick="setWhiteTheme()"></button> <br>
+            <img src="./img/theme1.png" width="50px" height="50px" onclick="setBlackTheme()"></button> <br>
+        </div>
         <script>
         </script>
     </body>
