--- a/reloj.html
+++ b/reloj.html
@@ -12,8 +12,9 @@
     <script src="./js/main.js"></script>
     <script src="./js/jquery.js"></script>
     <script src="./js/jquery-ui.js"></script>
+    <script src="./js/snap.svg-min.js"></script>
 </head>
-    <body onload="startTime()">
+    <body>
         <div class="cuerpoPagina">
             <div class="containerTituloPagina">
                 <h1 class="tituloVerde">
@@ -39,17 +40,27 @@
                 <img src="./img/mainImage.jpg" width="100%" height="450">
                 <br>
                 <p>Esto es un relog</p>
-                <br>
-                <p id="clock">
+                <svg id="vector" viewBox="-50 10 300 120">
+                    <circle id="myCircle" cx="100" cy="70" r="50"
+                    fill="white" stroke="black" stroke-width="2"/>
+                    <text id="tex" x="80" y="18" fill="black"/>
+                    <line id="hor" x1="100" y1="70" x2="110" y2="80"style="stroke:gray;stroke-width:5;stroke-linecap:round;opacity:0.8"/>
+                    <line id="min" x1="100" y1="70" x2="80" y2="40"style="stroke:lightgray;stroke-width:3;stroke-linecap:round;opacity:0.8"/>
+                    <line id="seg" x1="100" y1="70" x2="115" y2="45" style="stroke:black;stroke-width:1;stroke-linecap:round;opacity:0.8"/>
+                    <circle id="mySecondCircle" cx="120" cy="100" r="10"fill="white" stroke="lightred" stroke-width="1" opacity="0.5"/>
+                    <line id="ds" x1="120" y1="100" x2="135" y2="75"style="stroke:#f2dede;stroke-width:1;opacity:0.8"/>
+                  </svg>
 
-                </p>
                 <br>
             </div>
         </div>
-        <button type="button" onclick="setBlackTheme()">Tema Negro</button> 
-        <button type="button" onclick="setWhiteTheme()">Tema Blanco</button> 
         <input id="btnscroll" type="button" value="Subir al inicio" />
+        <div class="temas">
+            <img src="./img/theme2.png" width="50px" height="50px" onclick="setWhiteTheme()"></button> <br>
+            <img src="./img/theme1.png" width="50px" height="50px" onclick="setBlackTheme()"></button> <br>
+        </div>
         <script>
+
         </script>
     </body>
 </html>
