--- a/sobremi.html
+++ b/sobremi.html
@@ -60,6 +60,12 @@
                         -diseñar webs<br>
                         <br>
                     </div>
+                    <h3>Idiomas</h3>
+                    <div>
+                      Español (nativo)<br>
+                      Ingles (B2)<br>
+                        <br>
+                    </div>
                   </div>
             </div>
         </div>
