--- a/reloj.html
+++ b/reloj.html
@@ -43,7 +43,7 @@
                 <svg id="vector" viewBox="-50 10 300 120">
                     <circle id="myCircle" cx="100" cy="70" r="50"
                     fill="white" stroke="black" stroke-width="2"/>
-                    <text id="tex" x="80" y="18" fill="black"/>
+                    <text id="tex" x="80" y="18" fill="green"/>
                     <line id="hor" x1="100" y1="70" x2="110" y2="80"style="stroke:gray;stroke-width:5;stroke-linecap:round;opacity:0.8"/>
                     <line id="min" x1="100" y1="70" x2="80" y2="40"style="stroke:lightgray;stroke-width:3;stroke-linecap:round;opacity:0.8"/>
                     <line id="seg" x1="100" y1="70" x2="115" y2="45" style="stroke:black;stroke-width:1;stroke-linecap:round;opacity:0.8"/>
